<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/amount"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextAmount"
        android:layout_marginTop="8dp"
        android:hint="@string/description"
        android:autofillHints=""
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinnerPayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextDescription"
        android:layout_marginTop="8dp"
        android:hint="@string/choose_payer"/>

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextViewParticipants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerPayer"
        android:layout_marginTop="8dp"
        android:hint="@string/choose_participants"
        android:inputType="text"/>

    <Button
        android:id="@+id/buttonSaveExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/multiAutoCompleteTextViewParticipants"
        android:layout_marginTop="16dp"
        android:text="@string/save_expense"/>
</RelativeLayout>
