<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextNewGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_group_name"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextNewGroupDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_group_description"
        android:inputType="text"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonUpdateGroupInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonAddParticipant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_participants"
        android:layout_marginTop="16dp"/>

    <ListView
        android:id="@+id/listViewParticipants"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonLeaveGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_group"
        android:layout_marginTop="16dp"/>
</LinearLayout>

