<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_group_name"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextGroupDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_group_description"
        android:inputType="text"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:layout_marginTop="16dp"/>
</LinearLayout>
