<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group_name"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextGroupDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group_description"
        android:inputType="text"
        android:autofillHints="" />

    <!-- Add Participants Button -->
    <Button
        android:id="@+id/buttonAddParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_participants"
        android:onClick="onAddParticipantsClick"/>

    <Button
        android:id="@+id/buttonCreateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group"/>
</LinearLayout>

