<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Back Button -->
    <Button
        android:id="@+id/imageButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBackButtonClick"
        android:text="@string/back_button" />

    <Button
        android:id="@+id/buttonGroupSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_settings"
        android:onClick="onGroupSettingsClick"/>

    <!-- Group Details -->
    <TextView
        android:id="@+id/textViewGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name_placeholder"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/textViewGroupDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_description_placeholder"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/textViewMySummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <!-- Settle Up Button -->
    <Button
        android:id="@+id/buttonSettleUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settle_up_button"
        android:onClick="onSettleUpButtonClick"
        android:layout_marginTop="16dp"/>

    <!-- List of Expenses -->
    <ListView
        android:id="@+id/listViewExpenses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:layout_marginTop="16dp"/>

</LinearLayout>

