<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/item_settle_up_participant.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewSettleUpParticipantUid"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonSettleUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settle_up"/>

    <Button
        android:id="@+id/buttonRemind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remind"/>

    <TextView
        android:id="@+id/textViewSettledUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are_settled_up"
        android:visibility="gone"/>
</LinearLayout>
