<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spinnerPayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonBack"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spinnerPayee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerPayer"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerPayee"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_amount"
        android:autofillHints=""
        android:inputType="number" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/editTextAmount"
        android:layout_marginTop="16dp"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
