<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textViewNewExpenseNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_expense_notification" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchNewExpenseNotification"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textViewExpenseReminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_reminders" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchExpenseReminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textViewGroupUpdates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_updates" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchGroupUpdates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</LinearLayout>
